@@ -6936,11 +6936,49 @@ name|HiveLock
 argument_list|>
 name|locks
 init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|showLocks
+operator|.
+name|getTableName
+argument_list|()
+operator|==
+literal|null
+condition|)
+block|{
+name|locks
+operator|=
 name|lockMgr
 operator|.
 name|getLocks
 argument_list|()
-decl_stmt|;
+expr_stmt|;
+block|}
+else|else
+block|{
+name|locks
+operator|=
+name|lockMgr
+operator|.
+name|getLocks
+argument_list|(
+name|getHiveObject
+argument_list|(
+name|showLocks
+operator|.
+name|getTableName
+argument_list|()
+argument_list|,
+name|showLocks
+operator|.
+name|getPartSpec
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 name|Collections
 operator|.
 name|sort
@@ -7406,56 +7444,24 @@ return|return
 literal|0
 return|;
 block|}
-comment|/**    * Unlock the table/partition specified    *    * @param unlockTbl    *          the table/partition to be unlocked    * @return Returns 0 when execution succeeds and above 0 if it fails.    * @throws HiveException    *           Throws this exception if an unexpected error occurs.    */
 specifier|private
-name|int
-name|unlockTable
+name|HiveLockObject
+name|getHiveObject
 parameter_list|(
-name|UnlockTableDesc
-name|unlockTbl
+name|String
+name|tabName
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|partSpec
 parameter_list|)
 throws|throws
 name|HiveException
 block|{
-name|Context
-name|ctx
-init|=
-name|driverContext
-operator|.
-name|getCtx
-argument_list|()
-decl_stmt|;
-name|HiveLockManager
-name|lockMgr
-init|=
-name|ctx
-operator|.
-name|getHiveLockMgr
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|lockMgr
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|HiveException
-argument_list|(
-literal|"unlock Table LockManager not specified"
-argument_list|)
-throw|;
-block|}
-name|String
-name|tabName
-init|=
-name|unlockTbl
-operator|.
-name|getTableName
-argument_list|()
-decl_stmt|;
 name|Table
 name|tbl
 init|=
@@ -7489,19 +7495,6 @@ literal|" does not exist "
 argument_list|)
 throw|;
 block|}
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|partSpec
-init|=
-name|unlockTbl
-operator|.
-name|getPartSpec
-argument_list|()
-decl_stmt|;
 name|HiveLockObject
 name|obj
 init|=
@@ -7571,6 +7564,73 @@ name|par
 argument_list|)
 expr_stmt|;
 block|}
+return|return
+name|obj
+return|;
+block|}
+comment|/**    * Unlock the table/partition specified    *    * @param unlockTbl    *          the table/partition to be unlocked    * @return Returns 0 when execution succeeds and above 0 if it fails.    * @throws HiveException    *           Throws this exception if an unexpected error occurs.    */
+specifier|private
+name|int
+name|unlockTable
+parameter_list|(
+name|UnlockTableDesc
+name|unlockTbl
+parameter_list|)
+throws|throws
+name|HiveException
+block|{
+name|Context
+name|ctx
+init|=
+name|driverContext
+operator|.
+name|getCtx
+argument_list|()
+decl_stmt|;
+name|HiveLockManager
+name|lockMgr
+init|=
+name|ctx
+operator|.
+name|getHiveLockMgr
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|lockMgr
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|HiveException
+argument_list|(
+literal|"unlock Table LockManager not specified"
+argument_list|)
+throw|;
+block|}
+name|String
+name|tabName
+init|=
+name|unlockTbl
+operator|.
+name|getTableName
+argument_list|()
+decl_stmt|;
+name|HiveLockObject
+name|obj
+init|=
+name|getHiveObject
+argument_list|(
+name|tabName
+argument_list|,
+name|unlockTbl
+operator|.
+name|getPartSpec
+argument_list|()
+argument_list|)
+decl_stmt|;
 name|List
 argument_list|<
 name|HiveLock
