@@ -7224,6 +7224,93 @@ parameter_list|)
 throws|throws
 name|SemanticException
 block|{
+name|String
+name|tableName
+init|=
+literal|null
+decl_stmt|;
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|partSpec
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|ast
+operator|.
+name|getChildCount
+argument_list|()
+operator|==
+literal|1
+condition|)
+block|{
+comment|// table for which show locks is being executed
+name|ASTNode
+name|tableTypeExpr
+init|=
+operator|(
+name|ASTNode
+operator|)
+name|ast
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|tableName
+operator|=
+name|getFullyQualifiedName
+argument_list|(
+operator|(
+name|ASTNode
+operator|)
+name|tableTypeExpr
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// get partition metadata if partition specified
+if|if
+condition|(
+name|tableTypeExpr
+operator|.
+name|getChildCount
+argument_list|()
+operator|==
+literal|2
+condition|)
+block|{
+name|ASTNode
+name|partspec
+init|=
+operator|(
+name|ASTNode
+operator|)
+name|tableTypeExpr
+operator|.
+name|getChild
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|partSpec
+operator|=
+name|getPartSpec
+argument_list|(
+name|partspec
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|ShowLocksDesc
 name|showLocksDesc
 init|=
@@ -7234,6 +7321,10 @@ name|ctx
 operator|.
 name|getResFile
 argument_list|()
+argument_list|,
+name|tableName
+argument_list|,
+name|partSpec
 argument_list|)
 decl_stmt|;
 name|rootTasks
