@@ -31,6 +31,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -73,6 +83,17 @@ literal|1L
 decl_stmt|;
 name|String
 name|resFile
+decl_stmt|;
+name|String
+name|tableName
+decl_stmt|;
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|partSpec
 decl_stmt|;
 comment|/**    * table name for the result of show locks.    */
 specifier|private
@@ -120,6 +141,17 @@ name|ShowLocksDesc
 parameter_list|(
 name|Path
 name|resFile
+parameter_list|,
+name|String
+name|tableName
+parameter_list|,
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|partSpec
 parameter_list|)
 block|{
 name|this
@@ -130,6 +162,94 @@ name|resFile
 operator|.
 name|toString
 argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|partSpec
+operator|=
+name|partSpec
+expr_stmt|;
+name|this
+operator|.
+name|tableName
+operator|=
+name|tableName
+expr_stmt|;
+block|}
+comment|/**    * @return the tableName    */
+annotation|@
+name|Explain
+argument_list|(
+name|displayName
+operator|=
+literal|"table"
+argument_list|)
+specifier|public
+name|String
+name|getTableName
+parameter_list|()
+block|{
+return|return
+name|tableName
+return|;
+block|}
+comment|/**    * @param tableName    *          the tableName to set    */
+specifier|public
+name|void
+name|setTableName
+parameter_list|(
+name|String
+name|tableName
+parameter_list|)
+block|{
+name|this
+operator|.
+name|tableName
+operator|=
+name|tableName
+expr_stmt|;
+block|}
+comment|/**    * @return the partSpec    */
+annotation|@
+name|Explain
+argument_list|(
+name|displayName
+operator|=
+literal|"partition"
+argument_list|)
+specifier|public
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|getPartSpec
+parameter_list|()
+block|{
+return|return
+name|partSpec
+return|;
+block|}
+comment|/**    * @param partSpec    *          the partSpec to set    */
+specifier|public
+name|void
+name|setPartSpecs
+parameter_list|(
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|partSpec
+parameter_list|)
+block|{
+name|this
+operator|.
+name|partSpec
+operator|=
+name|partSpec
 expr_stmt|;
 block|}
 comment|/**    * @return the resFile    */
